cluster/apps/falco/networkpolicies/falco-k8s-metacollector.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falco-k8s-metacollector
  namespace: falco
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: k8s-metacollector
      app.kubernetes.io/instance: falco
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: falco
            app.kubernetes.io/instance: falco
            "k8s:io.kubernetes.pod.namespace": falco
      toPorts:
        - ports:
            - port: "45000"
              protocol: TCP
  egress:
    - toEntities:
        - host
      toPorts:
        - ports:
            - port: "6443" # kube-api
              protocol: TCP
