cluster/apps/falco/networkpolicies/falco-redis.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falco-sidekick-ui-redis
  namespace: falco
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: falcosidekick
      app.kubernetes.io/component: ui-redis
      app.kubernetes.io/instance: falco
      app.kubernetes.io/part-of: falcosidekick
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: falcosidekick
            app.kubernetes.io/component: ui
            app.kubernetes.io/instance: falco
            app.kubernetes.io/part-of: falcosidekick
            "k8s:io.kubernetes.pod.namespace": falco
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: raw.githubusercontent.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
