cluster/apps/falco/networkpolicies/falco-sidekick-ui.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: falco-sidekick-ui
  namespace: falco
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: falcosidekick
      app.kubernetes.io/component: ui
      app.kubernetes.io/instance: falco
      app.kubernetes.io/part-of: falcosidekick
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            app.kubernetes.io/name: falcosidekick
            app.kubernetes.io/component: core
            app.kubernetes.io/instance: falco
            app.kubernetes.io/part-of: falcosidekick
            "k8s:io.kubernetes.pod.namespace": falco
      toPorts:
        - ports:
            - port: "2802"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sService:
            serviceName: falco-falcosidekick-ui-redis
            namespace: falco
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: falcosidekick
            app.kubernetes.io/component: ui-redis
            app.kubernetes.io/instance: falco
            app.kubernetes.io/part-of: falcosidekick
            "k8s:io.kubernetes.pod.namespace": falco
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
