cluster/apps/falco/networkpolicies/traefik-ingress-falco.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway-egress-falco
  namespace: network
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy-gateway
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: envoy-gateway
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: falcosidekick
            app.kubernetes.io/component: ui
            app.kubernetes.io/instance: falco
            app.kubernetes.io/part-of: falcosidekick
            "k8s:io.kubernetes.pod.namespace": falco
      toPorts:
        - ports:
            - port: "2802"
              protocol: TCP
